--- a/index.html
+++ b/index.html
@@ -1,90 +1,128 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
 <head>
-    <meta charset=" utf-8">
-    <title>ZeroGraphics Demo</title>
-
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background: #444;
-            color: #98ffb1;
-        }
-
-        canvas {
-            box-sizing: border-box;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            padding: 2px;
-
-        }
-    </style>
-
-    <script type="module" defer="true">
-        import { barebonesWasi } from "./barebones-wasi.js";
-        import { createPlatformEnvironment, createInputModule, createWebGlModule, createWebsocketModule } from "./zero-graphics.js";
-
-        var wasiImports = new barebonesWasi();
-        const canvas_element = document.getElementById("render-canvas");
-        var globalInstance;
-
-        let imports = {
-            env: createPlatformEnvironment(() => globalInstance),
-            wasi_snapshot_preview1: wasiImports,
-            webgl: createWebGlModule(canvas_element, () => globalInstance),
-            input: createInputModule(canvas_element, () => globalInstance),
-            websocket: createWebsocketModule(() => globalInstance),
-        };
-
-        fetch("demo_application.wasm")
-            .then((response) => response.arrayBuffer())
-            .then((bytes) => WebAssembly.instantiate(bytes, imports))
-            .then((results) => results.instance)
-            .then((instance) => {
-                globalInstance = instance;
-                let res = instance.exports.app_init();
-                if (res == 0) {
-                    // run the update loop until the app dies
-                    function update() {
-                        const styles = window.getComputedStyle(canvas_element);
-
-                        const dx = parseFloat(styles.paddingLeft) + parseFloat(styles.paddingRight);
-                        const dy = parseFloat(styles.paddingTop) + parseFloat(styles.paddingBottom);
-
-                        canvas_element.width = window.devicePixelRatio * (canvas_element.clientWidth - dx);
-                        canvas_element.height = window.devicePixelRatio * (canvas_element.clientHeight - dy);
-
-                        let res = instance.exports.app_update();
-                        if (res == 0) {
-                            requestAnimationFrame(update);
-                        } else {
-                            let error_ptr = instance.exports.app_get_error_ptr();
-                            let error_len = instance.exports.app_get_error_len();
-                            let view = new Uint8Array(instance.exports.memory.buffer, error_ptr, error_len);
-                            let str = new TextDecoder().decode(view);
-                            console.log("app_update returned error code ", str);
-                            alert(str);
-                        }
-                    }
-
-                    requestAnimationFrame(update);
-                } else {
-                    console.log("app_init returned ", res);
-                }
-            });
-    </script>
+<meta charset="UTF-8"/>
+<title>stuff</title>
+<link rel="icon" type="image/png" href="favicon.png"/>
+<style type="text/css">
+body {
+    margin: 0;
+    background-color: #2C3333;
+}
+a, a:visited, a:hover, a:active {
+    color: inherit;
+    text-decoration: none;
+}
+.title {
+    color: #A5C9CA;
+    text-align: left;
+    padding-left: 20px;
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-size: 48px;
+    margin-top: 0px;
+}
+.main-menu-item {
+    font-size: 18px;
+    padding-left: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.main-menu-link {
+    text-decoration: none;
+    color: #A5C9CA;
+}
+.gallery {
+    margin-left: 50px;
+    margin-right: auto;
+    display: block;
+    height: auto;
+}
+.thumb {
+    position: relative;
+    width: 250px;
+    height: 220px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 30px;
+    padding: 1px;
+    float: left;
+    background: #395B64;
+    border: 1px solid black;
+    border-radius: 8px;
+}
+.thumb-title {
+    text-align: center;
+    color: #A5C9CA;
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-size: 18px;
+    margin-bottom: 7px;
+}
+.img-frame {
+    margin: 2px;
+    width: auto;
+}
+.img-btn {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    width: 24px;
+    padding: 2px;
+    display: block;
+    background-color: #A5C9CA;
+    cursor: pointer;
+    border-radius: 4px;
+    border: 1px solid black;
+    text-align: center;
+    color: black;
+}
+.img-btn:hover {
+    background-color: black;
+    border-color #A5C9CA;
+    color: #A5C9CA
+}
+.img-btn-link {
+    text-decoration: none;
+    font-weight: bold;
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-size: 14px;
+    color: inherit;
+}
+.image {
+    display: block;
+    object-fit: cover;
+    width: 100%;
+    height: 175px;
+    max-width: 220px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 8px;
+    border: 1px solid black;
+}
+.gallery-bottom {
+    height: 60px;
+    clear: both;
+}
+</style>
 </head>
 
 <body>
-    <canvas id="render-canvas" tabindex="1">
-    </canvas>
-</body>
 
+<div class="title">stuff</div>
+
+<div class="gallery">
+
+<div class="thumb">
+    <div class="thumb-title"><a href="zero-graphics-demo/">zero-graphics demo</a></div>
+    <div class="img-frame"><a href="zero-graphics-demo/"><img class="image" src="zero-graphics-demo/screenshot.png"></img></a></div>
+</div>
+
+<div class="thumb">
+    <div class="thumb-title">Coming Soon!</div>
+    <div class="img-frame"><img class="image" src="destruct/screenshot.png"></img></div>
+</div>
+
+</div>
+
+<div class="gallery-bottom"></div>
+
+</body>
 </html>
