add links and tooltips
Signed-off-by: Miaofei <ameision@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -60,25 +60,6 @@ a, a:visited, a:hover, a:active {
     margin: 2px;
     width: auto;
 }
-.img-btn {
-    position: absolute;
-    top: 4px;
-    right: 4px;
-    width: 24px;
-    padding: 2px;
-    display: block;
-    background-color: #A5C9CA;
-    cursor: pointer;
-    border-radius: 4px;
-    border: 1px solid black;
-    text-align: center;
-    color: black;
-}
-.img-btn:hover {
-    background-color: black;
-    border-color #A5C9CA;
-    color: #A5C9CA
-}
 .img-btn-link {
     text-decoration: none;
     font-weight: bold;
@@ -110,13 +91,13 @@ a, a:visited, a:hover, a:active {
 
 <div class="gallery">
 
-<div class="thumb">
-    <div class="thumb-title"><a href="zero-graphics-demo/">zero-graphics demo</a></div>
+<div class="thumb" title="zero-graphics demo">
+    <div class="thumb-title"><a href="https://github.com/mm318/zero-graphics">zero-graphics demo</a></div>
     <div class="img-frame"><a href="zero-graphics-demo/"><img class="image" src="zero-graphics-demo/screenshot.png"></img></a></div>
 </div>
 
-<div class="thumb">
-    <div class="thumb-title">Coming Soon!</div>
+<div class="thumb" title="Coming Soon!">
+    <div class="thumb-title"><a href="https://github.com/mm318/destruct">destruct</a></div>
     <div class="img-frame"><img class="image" src="destruct/screenshot.png"></img></div>
 </div>
 
