add link to destruct
Signed-off-by: Miaofei <ameision@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@ a, a:visited, a:hover, a:active {
     <div class="img-frame"><a href="zero-graphics-demo/"><img class="image" src="zero-graphics-demo/screenshot.png"></img></a></div>
 </div>
 
-<div class="thumb" title="Coming Soon!">
+<div class="thumb" title="destruct mini-game">
     <div class="thumb-title"><a href="https://github.com/mm318/destruct">destruct</a></div>
-    <div class="img-frame"><img class="image" src="destruct/screenshot.png"></img></div>
+    <div class="img-frame"><a href="destruct/"><img class="image" src="destruct/screenshot.png"></img></a></div>
 </div>
 
 </div>
