mm318/Bombermaaan commit c1e65074 without video rescaling
Signed-off-by: Miaofei <ameision@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@ a, a:visited, a:hover, a:active {
     <div class="img-frame"><a href="destruct/"><img class="image" src="destruct/screenshot.png"></img></a></div>
 </div>
 
+<div class="thumb" title="bombermaaan">
+    <div class="thumb-title"><a href="https://github.com/mm318/bombermaaan">bombermaaan</a></div>
+    <div class="img-frame"><a href="bombermaaan/"><img class="image" src="bombermaaan/screenshot.png"></img></a></div>
+</div>
+
 </div>
 
 <div class="gallery-bottom"></div>
